--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,7 @@
 #resolver: lts-9.0
 #resolver: lts-10.3
-resolver: lts-13.6
+#resolver: lts-13.6
+resolver: lts-18.18
 extra-deps:
   - ../beam/beam-core
 
